--- a/dayBday/Base.lproj/Main.storyboard
+++ b/dayBday/Base.lproj/Main.storyboard
@@ -40,7 +40,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="917" y="472"/>
+            <point key="canvasLocation" x="893" y="472"/>
+        </scene>
+        <!--Input View View Controller-->
+        <scene sceneID="NlM-DH-Ky3">
+            <objects>
+                <viewController storyboardIdentifier="InputViewViewController" id="RCJ-k8-EfO" customClass="InputViewViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZVP-go-E8g"/>
+                        <viewControllerLayoutGuide type="bottom" id="liC-Gm-X9g"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="FZb-oL-nYT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oUx-Hf-N8q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1657" y="481"/>
         </scene>
     </scenes>
 </document>
